# libass

./: .gitignore  CMakeLists.txt  README.md
cmake/: libass-config.cmake
libass/: ass.c  ass.h  ass_bitmap.c  ass_blur.c  ass_cache.c  ass_coretext.c  ass_directwrite.c  ass_directwrite.cpp  ass_directwrite.h  ass_drawing.c  ass_font.c  ass_fontconfig.c  ass_fontselect.c  ass_fontselect.h  ass_library.c  ass_library.h  ass_outline.c  ass_parse.c  ass_rasterizer.c  ass_rasterizer_c.c  ass_render.c  ass_render_api.c  ass_shaper.c  ass_string.c  ass_strtod.c  ass_utils.c  ass_utils.h  dwrite_c.h
patches/: 0001-fixed-wrong-frame-top-to-clip-when-render.patch  0002-convert-vs2013-not-supported-C99-code-to-C89.patch
win32/: libass.vcxproj
win32/VS2013/: fopen_utf8.c  libass.def  libass.vcxproj  libass.vcxproj.filters  strings.h
win32/package/: package.bat
xbmc/: package.bat
